--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ Deployment quick checklist (full instructions below):
       </div>
 
       <aside class="profile">
-        <div class="avatar" aria-hidden="true"></div>
+        <img src="09.jpg" alt="Profile Photo">
         <div style="font-weight:700">Anantha Narayanan R</div>
         <div class="muted">Aspiring vulnerability analyst • ADIS student</div>
         <div style="margin-top:12px;display:flex;justify-content:center;gap:8px">
