--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       font-family: Inter, ui-sans-serif, system-ui;
     }
     *{box-sizing:border-box}
-    html,body{height:100%;margin:0;background:linear-gradient(180deg,var(--bg),#071023);color:var(--text);}
+    html,body{height:100%;margin:0;background:linear-gradient(180deg,var(--bg),#071023);color:var(--text);scroll-behavior:smooth;}
     a{color:inherit;text-decoration:none}
     .wrap{max-width:var(--max-w);margin:24px auto;padding:20px}
 
@@ -63,24 +63,25 @@
     .card .meta{margin-top:10px;font-size:13px;color:var(--muted)}
 
     /* Skills animation */
-    .skills-grid{display:flex;flex-wrap:wrap;gap:12px}
+    .skills-grid{display:grid;gap:14px;grid-template-columns:repeat(auto-fit,minmax(220px,1fr))}
     .skill{
-      flex:1 1 auto;
-      padding:10px 16px;
-      border-radius:20px;
+      padding:14px;
+      border-radius:12px;
       color:#fff;
       font-weight:600;
       font-size:14px;
       animation:pulse 3s infinite;
     }
-    .skill.html{background:var(--accent)}
-    .skill.css{background:var(--accent2)}
-    .skill.js{background:var(--accent3)}
-    .skill.linux{background:var(--accent4)}
+    .skill h3{margin:0 0 8px 0;font-size:16px}
+    .skill ul{margin:0;padding-left:18px;font-size:14px;color:#f3f4f6}
+
+    .offensive{background:linear-gradient(135deg,var(--accent4),#f87171)}
+    .defensive{background:linear-gradient(135deg,var(--accent2),#60a5fa)}
+    .frontend{background:linear-gradient(135deg,var(--accent3),#fcd34d)}
 
     @keyframes pulse {
       0%{transform:scale(1)}
-      50%{transform:scale(1.08)}
+      50%{transform:scale(1.05)}
       100%{transform:scale(1)}
     }
 
@@ -100,7 +101,7 @@
       <nav id="mainNav">
         <a href="#home">Home</a>
         <a href="#projects">Projects</a>
-        <a href="#skills">Skills</a>
+        <a href="#skills">What I Know</a>
         <a href="#about">About</a>
         <a href="#contact">Contact</a>
       </nav>
@@ -120,6 +121,7 @@
         <div style="margin-top:12px;display:flex;justify-content:center;gap:8px">
           <a title="GitHub" href="https://github.com/evertrustai" target="_blank">GitHub</a>
           <a title="LinkedIn" href="https://linkedin.com/in/ananthanrayananr2004" target="_blank">LinkedIn</a>
+          <a title="Instagram" href="https://instagram.com/evertrustai" target="_blank">Instagram</a>
           <a title="Email" href="mailto:ananthanpkd2001@gmail.com">Email</a>
         </div>
       </aside>
@@ -139,20 +141,40 @@
           <div class="meta">Tech: HTML, JS, Firebase</div>
         </div>
         <div class="card">
-          <h3>Personal Portfolio</h3>
-          <p>This site itself, built and hosted on GitHub Pages with custom styling and animations.</p>
-          <div class="meta">Tech: HTML, CSS</div>
+          <h3>TryHackMe — Hash Hunt</h3>
+          <p>Room walkthrough focusing on password cracking and hash analysis.</p>
+          <div class="meta"><a href="https://tryhackme.com/jr/hashhunt" target="_blank">View Room</a></div>
         </div>
       </div>
     </section>
 
     <section id="skills">
-      <h2>Skills</h2>
+      <h2>What I Know</h2>
       <div class="skills-grid">
-        <div class="skill html">HTML</div>
-        <div class="skill css">CSS</div>
-        <div class="skill js">JavaScript</div>
-        <div class="skill linux">Linux / Kali</div>
+        <div class="skill offensive">
+          <h3>Offensive Security</h3>
+          <ul>
+            <li>Enumeration (Nmap, Enum4linux)</li>
+            <li>Password Attacks (Hydra, John)</li>
+            <li>Exploitation basics (Metasploit, CTFs)</li>
+          </ul>
+        </div>
+        <div class="skill defensive">
+          <h3>Defensive Security</h3>
+          <ul>
+            <li>Log Analysis</li>
+            <li>SIEM Basics (Wazuh)</li>
+            <li>Network Monitoring</li>
+          </ul>
+        </div>
+        <div class="skill frontend">
+          <h3>Frontend</h3>
+          <ul>
+            <li>HTML & CSS</li>
+            <li>JavaScript Basics</li>
+            <li>Responsive Design</li>
+          </ul>
+        </div>
       </div>
     </section>
 
