--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
       <h2>Projects</h2>
       <div class="grid projects-grid">
         <div class="card">
-          <h3>TryHackMe — Brute It</h3>
-          <p>Enumeration, brute force, and privilege escalation in Linux environment.</p>
-          <div class="meta">Tools: Hydra, Linux</div>
+          <h3>GutHub - Hash-ID Helper</h3>
+          <p>Smart Hash Identifier & Cracker Assistant</p>
+          <div class="meta"><a href="https://github.com/evertrustai/hash-id-helper" target="_blank">View Tool</a></div>
         </div>
         <div class="card">
           <h3>Blood Donor Finder App (Concept)</h3>
