--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
     </section>
 
     <footer>
-      Built with ❤️ — Update this template and host on GitHub Pages.
+      Thank you for visiting......
     </footer>
   </div>
 </body>
