--- a/index.html
+++ b/index.html
@@ -159,16 +159,43 @@
 
     <section id="skills">
       <h2>What I Know</h2>
-      <div class="know-section">
-        <div class="know-category">
-          <h3>Offensive Security</h3>
-          <div class="options">
-            <div class="option know">Bug Bounty</div>
-            <div class="option know">Exploitation</div>
-            <div class="option">Wireless Hacking</div>
-            <div class="option know">nmap</div>
-            <div class="option know">VAPT</div>
-          </div>
+      <div class="card-body">
+<div class="row">
+<div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded-lg mt-3 mx-2">
+<div class="text-md-center text-xl-left">
+<h6 class="mb-1">VAPT</h6>
+</div>
+</div>
+<div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded-lg mt-3 mx-2">
+<div class="text-md-center text-xl-left">
+<h6 class="mb-1">Wireless Hacking</h6>
+</div>
+</div>
+<div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded-lg mt-3 mx-2" style="border: 1px solid yellow;">
+<div class="text-md-center text-xl-left">
+<h6 class="mb-1">Bug Bounty</h6>
+</div>
+</div>
+</div><h4 class="card-title">Offensive Security</h4>
+
+<div class="row">
+<div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded-lg mt-3 mx-2" style="border: 1px solid magenta;">
+<div class="text-md-center text-xl-left">
+<h6 class="mb-1">Exploitation</h6>
+</div>
+</div>
+<div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded-lg mt-3 mx-2">
+<div class="text-md-center text-xl-left">
+<h6 class="mb-1">Social Engineering</h6>
+</div>
+</div>
+<!-- <div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded-lg mt-3 mx-2">
+<div class="text-md-center text-xl-left">
+<h6 class="mb-1"></h6>
+</div>
+</div> -->
+</div>
+</div>
         </div>
         <div class="know-category">
           <h3>Defensive Security</h3>
