--- a/index.html
+++ b/index.html
@@ -228,6 +228,47 @@
                 </div>
               </div>
 
+<div class="row">
+  <div class="col-md-4 grid-margin stretch-card" style="background-color: #f0f8ff; border-radius: 10px; padding: 15px;">
+    <div class="card" style="background-color: transparent; box-shadow: none;">
+      <div class="card-body">
+        <h4 class="card-title">Offensive Security</h4>
+        <div class="row">
+          <div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded-lg mt-3 mx-2">
+            <div class="text-md-center text-xl-left">
+              <h6 class="mb-1">VAPT</h6>
+            </div>
+          </div>
+          <div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded-lg mt-3 mx-2">
+            <div class="text-md-center text-xl-left">
+              <h6 class="mb-1">Wireless Hacking</h6>
+            </div>
+          </div>
+          <div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded-lg mt-3 mx-2" style="border: 1px solid yellow;">
+            <div class="text-md-center text-xl-left">
+              <h6 class="mb-1">Bug Bounty</h6>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded-lg mt-3 mx-2" style="border: 1px solid magenta;">
+            <div class="text-md-center text-xl-left">
+              <h6 class="mb-1">Exploitation</h6>
+            </div>
+          </div>
+          <div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded-lg mt-3 mx-2">
+            <div class="text-md-center text-xl-left">
+              <h6 class="mb-1">Social Engineering</h6>
+            </div>
+          </div>
+        </div>      
+      </div>
+    </div>
+  </div>
+</div>
+
+
+              
               <div class="col-md-4 grid-margin stretch-card">
                 <div class="card">
                   <div class="card-body">
