--- a/index.html
+++ b/index.html
@@ -229,43 +229,53 @@
               </div>
 
 <div class="row">
-  <div class="col-md-4 grid-margin stretch-card" style="background-color: #f0f8ff; border-radius: 10px; padding: 15px;">
-    <div class="card" style="background-color: transparent; box-shadow: none;">
+  <div class="col-md-4 grid-margin stretch-card">
+    <div class="card">
       <div class="card-body">
         <h4 class="card-title">Offensive Security</h4>
+
         <div class="row">
-          <div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded-lg mt-3 mx-2">
-            <div class="text-md-center text-xl-left">
-              <h6 class="mb-1">VAPT</h6>
-            </div>
+          <div class="highlight-item">
+            <h6 class="mb-1">VAPT</h6>
           </div>
-          <div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded-lg mt-3 mx-2">
-            <div class="text-md-center text-xl-left">
-              <h6 class="mb-1">Wireless Hacking</h6>
-            </div>
+          <div class="highlight-item">
+            <h6 class="mb-1">Wireless Hacking</h6>
           </div>
-          <div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded-lg mt-3 mx-2" style="border: 1px solid yellow;">
-            <div class="text-md-center text-xl-left">
-              <h6 class="mb-1">Bug Bounty</h6>
-            </div>
+          <div class="highlight-item" style="border: 1px solid yellow;">
+            <h6 class="mb-1">Bug Bounty</h6>
           </div>
         </div>
+
         <div class="row">
-          <div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded-lg mt-3 mx-2" style="border: 1px solid magenta;">
-            <div class="text-md-center text-xl-left">
-              <h6 class="mb-1">Exploitation</h6>
-            </div>
+          <div class="highlight-item" style="border: 1px solid magenta;">
+            <h6 class="mb-1">Exploitation</h6>
           </div>
-          <div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded-lg mt-3 mx-2">
-            <div class="text-md-center text-xl-left">
-              <h6 class="mb-1">Social Engineering</h6>
-            </div>
+          <div class="highlight-item">
+            <h6 class="mb-1">Social Engineering</h6>
           </div>
-        </div>      
+        </div>
+
       </div>
     </div>
   </div>
 </div>
+
+<style>
+.highlight-item {
+  background-color: #2c2f33; /* dark shade */
+  color: #ffffff; /* text color */
+  border-radius: 8px;
+  padding: 10px 15px;
+  margin: 10px 5px 0 5px;
+  display: flex;
+  align-items: center;
+  transition: background 0.3s;
+}
+
+.highlight-item:hover {
+  background-color: #23272a; /* slightly darker on hover */
+}
+</style>
 
 
               
