--- a/index.html
+++ b/index.html
@@ -190,17 +190,14 @@
       <div class="card-body">
         <h4 class="card-title">Offensive Security</h4>
         <div class="row">
-          <div class="skill-box"><h6 class="mb-1">VAPT</h6></div>
-          <div class="skill-box"><h6 class="mb-1">Wireless Hacking</h6></div>
-          <div class="skill-box" style="border: 1px solid yellow;"><h6 class="mb-1">Bug Bounty</h6></div>
-        </div>
-        <div class="row">
-          <div class="skill-box" style="border: 1px solid magenta;"><h6 class="mb-1">Exploitation</h6></div>
-          <div class="skill-box"><h6 class="mb-1">Social Engineering</h6></div>
-        </div>
-      </div>
-    </div>
-  </div>
+         <div class="skills-grid">
+  <div class="skill">VAPT</div>
+  <div class="skill">Wireless Hacking</div>
+  <div class="skill highlight-yellow">Bug Bounty</div>
+  <div class="skill highlight-pink">Exploitation</div>
+  <div class="skill">Social Engineering</div>
+</div>
+
 
   <!-- Defensive Security Column -->
   <div class="col-md-4 grid-margin stretch-card">
