--- a/index.html
+++ b/index.html
@@ -184,65 +184,132 @@
 </style>
 
 <div class="row">
-  <!-- Offensive Security Column -->
-  <div class="col-md-4 grid-margin stretch-card">
-    <div class="card">
-      <div class="card-body">
-        <h4 class="card-title">Offensive Security</h4>
-        <div class="row">
-         <div class="skills-grid">
-  <div class="row">
-          <div class="skill-box"><h6 class="mb-1">VAPT</h6></div>
-          <div class="skill-box"><h6 class="mb-1">Wireless Hacking</h6></div>
-          <div class="skill-box" style="border: 1px solid yellow;"><h6 class="mb-1">Bug Bounty</h6></div>
-        </div>
-        <div class="row">
-          <div class="skill-box" style="border: 1px solid magenta;"><h6 class="mb-1">Exploitation</h6></div>
-          <div class="skill-box"><h6 class="mb-1">Social Engineering</h6></div>
-        </div>
-      </div>
-    </div>
-  </div>
+              <div class="col-md-4 grid-margin stretch-card">
+                <div class="card">
+                  <div class="card-body">
+                    <h4 class="card-title">Offensive Security</h4>
+                    <div class="row">
+                      <div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded-lg mt-3 mx-2">
+                        <div class="text-md-center text-xl-left">
+                          <h6 class="mb-1">VAPT</h6>
+                        </div>
+                      </div>
+                      <div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded-lg mt-3 mx-2">
+                        <div class="text-md-center text-xl-left">
+                          <h6 class="mb-1">Wireless Hacking</h6>
+                        </div>
+                      </div>
+                      <div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded-lg mt-3 mx-2" style="border: 1px solid yellow;">
+                        <div class="text-md-center text-xl-left">
+                          <h6 class="mb-1">Bug Bounty</h6>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row" >
+                      <div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded-lg mt-3 mx-2" style="border: 1px solid magenta;">
+                        <div class="text-md-center text-xl-left">
+                          <h6 class="mb-1">Exploitation</h6>
+                        </div>
+                      </div>
+                      <div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded-lg mt-3 mx-2">
+                        <div class="text-md-center text-xl-left">
+                          <h6 class="mb-1">Social Engineering</h6>
+                        </div>
+                      </div>
+                      <!-- <div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded-lg mt-3 mx-2">
+                        <div class="text-md-center text-xl-left">
+                          <h6 class="mb-1"></h6>
+                        </div>
+                      </div> -->
+                    </div>      
+                  </div>
+                </div>
+              </div>
 
+              <div class="col-md-4 grid-margin stretch-card">
+                <div class="card">
+                  <div class="card-body">
+                    <h4 class="card-title">Defensive Security</h4>
+                    <div class="row">
+                      <div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded-lg mt-3 mx-2">
+                        <div class="text-md-center text-xl-left">
+                          <h6 class="mb-1">Network Defense</h6>
+                        </div>
+                      </div>
+                      <div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded-lg mt-3 mx-2">
+                        <div class="text-md-center text-xl-left">
+                          <h6 class="mb-1">SOC</h6>
+                        </div>
+                      </div>
+                      <div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded-lg mt-3 mx-2" style="border: 1px solid yellow;">
+                        <div class="text-md-center text-xl-left">
+                          <h6 class="mb-1">SIEM</h6>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row" >
+                      <div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded-lg mt-3 mx-2" style="border: 1px solid magenta;">
+                        <div class="text-md-center text-xl-left">
+                          <h6 class="mb-1">Cloud Security</h6>
+                        </div>
+                      </div>
+                      <div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded-lg mt-3 mx-2">
+                        <div class="text-md-center text-xl-left">
+                          <h6 class="mb-1">Endpoint Security</h6>
+                        </div>
+                      </div>
+                      <div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded-lg mt-3 mx-2">
+                        <div class="text-md-center text-xl-left">
+                          <h6 class="mb-1">Malware Analysis</h6>
+                        </div>
+                      </div>
+                    </div>      
+                  </div>
+                </div>
+              </div>
 
-  <!-- Defensive Security Column -->
-  <div class="col-md-4 grid-margin stretch-card">
-    <div class="card">
-      <div class="card-body">
-        <h4 class="card-title">Defensive Security</h4>
-        <div class="row">
-          <div class="skill-box"><h6 class="mb-1">Network Defense</h6></div>
-          <div class="skill-box"><h6 class="mb-1">SOC</h6></div>
-          <div class="skill-box" style="border: 1px solid yellow;"><h6 class="mb-1">SIEM</h6></div>
-        </div>
-        <div class="row">
-          <div class="skill-box" style="border: 1px solid magenta;"><h6 class="mb-1">Cloud Security</h6></div>
-          <div class="skill-box"><h6 class="mb-1">Endpoint Security</h6></div>
-          <div class="skill-box"><h6 class="mb-1">Malware Analysis</h6></div>
-        </div>
-      </div>
-    </div>
-  </div>
+              <div class="col-md-4 grid-margin stretch-card">
+                <div class="card">
+                  <div class="card-body">
+                    <h4 class="card-title">Frontend</h4>
+                    <div class="row">
+                      <div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded-lg mt-3 mx-2">
+                        <div class="text-md-center text-xl-left">
+                          <h6 class="mb-1">HTML</h6>
+                        </div>
+                      </div>
+                      <div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded-lg mt-3 mx-2">
+                        <div class="text-md-center text-xl-left">
+                          <h6 class="mb-1">CSS</h6>
+                        </div>
+                      </div>
+                      <div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded-lg mt-3 mx-2" style="border: 1px solid yellow;">
+                        <div class="text-md-center text-xl-left">
+                          <h6 class="mb-1">JavaScript</h6>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row" >
+                      <div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded-lg mt-3 mx-2" style="border: 1px solid magenta;">
+                        <div class="text-md-center text-xl-left">
+                          <h6 class="mb-1">Bootstrap</h6>
+                        </div>
+                      </div>
+                      <div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded-lg mt-3 mx-2">
+                        <div class="text-md-center text-xl-left">
+                          <h6 class="mb-1">React.Js</h6>
+                        </div>
+                      </div>
+                      <div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded-lg mt-3 mx-2">
+                        <div class="text-md-center text-xl-left">
+                          <h6 class="mb-1">Tailwind CSS</h6>
+                        </div>
+                      </div>
+                    </div>      
+                  </div>
+                </div>
+              </div>
 
-  <!-- Frontend Column -->
-  <div class="col-md-4 grid-margin stretch-card">
-    <div class="card">
-      <div class="card-body">
-        <h4 class="card-title">Frontend</h4>
-        <div class="row">
-          <div class="skill-box"><h6 class="mb-1">HTML</h6></div>
-          <div class="skill-box"><h6 class="mb-1">CSS</h6></div>
-          <div class="skill-box" style="border: 1px solid yellow;"><h6 class="mb-1">JavaScript</h6></div>
-        </div>
-        <div class="row">
-          <div class="skill-box" style="border: 1px solid magenta;"><h6 class="mb-1">Bootstrap</h6></div>
-          <div class="skill-box"><h6 class="mb-1">React.Js</h6></div>
-          <div class="skill-box"><h6 class="mb-1">Tailwind CSS</h6></div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
 
               
        
