--- a/index.html
+++ b/index.html
@@ -236,13 +236,15 @@
                       <div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded-lg mt-3 mx-2">
                         <div class="text-md-center text-xl-left">
                           <h6 class="mb-1">Network Defense</h6>
-                        </div>
-                        <div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded-lg mt-3 mx-2" style="border: 1px solid yellow;">
+                        </div
+                      </div>
+                      </div>
+                    <div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded-lg mt-3 mx-2" style="border: 1px solid yellow;">
                         <div class="text-md-center text-xl-left">
                           <h6 class="mb-1">SIEM</h6>
                         </div>
-                      </div>
-                      </div>
+                    </div>
+                  </div>
                       <div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded-lg mt-3 mx-2">
                         <div class="text-md-center text-xl-left">
                           <h6 class="mb-1">Cloud Security</h6>
@@ -280,12 +282,14 @@
                         <div class="text-md-center text-xl-left">
                           <h6 class="mb-1">Bootstrap</h6>
                         </div>
-                         <div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded-lg mt-3 mx-2" style="border: 1px solid yellow;">
+                      </div>
+                      </div>
+                    <div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded-lg mt-3 mx-2" style="border: 1px solid yellow;">
                         <div class="text-md-center text-xl-left">
                           <h6 class="mb-1">JavaScript</h6>
                         </div>
-                      </div>
-                      </div>
+                    </div>
+                  </div>
                       <div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded-lg mt-3 mx-2">
                         <div class="text-md-center text-xl-left">
                           <h6 class="mb-1">CSS</h6>
