--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
            <div class="project">
               <h3>What I Know</h3>
             </div>
+            </div>  
 
             <div class="row">
               <div class="col-md-4 grid-margin stretch-card">
@@ -299,6 +300,7 @@
               
             <div class="project">
               <h3>Education</h3>
+            </div>
             </div>
 
             <div class="row">
