--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <div class="row">
               <div class="col-12 grid-margin stretch-card">
                 <div class="card corona-gradient-card profile-card">
-                  <img src="assets/images/dashboard/Group126@2x.png" class="gradient-corona-img rounded-circle mx-4" style="border: 4px solid white;" alt="">
+                  <img src="assets/images/dashboard/09.jpg" class="gradient-corona-img rounded-circle mx-4" style="border: 4px solid white;" alt="">
                   <h2 class="mb-1 mb-sm-0  vis">Anantha Narayanan R </h2>
                   <span>
                     <a href="https://www.instagram.com/evertrustai/" target="_blank" class="btn  btn-rounded get-started-btn insta mx-4">Follow on Instagram</a>
