--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                           <h6 class="mb-1">SOC</h6>
                         </div>
                       </div>
-                      <div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded-lg mt-3 mx-2" style="border: 1px solid yellow;">
+                      <div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded-lg mt-3 mx-2" style="border: 1px solid aqua;">
                         <div class="text-md-center text-xl-left">
                           <h6 class="mb-1">SIEM</h6>
                         </div>
@@ -288,7 +288,7 @@
                           <h6 class="mb-1">CSS</h6>
                         </div>
                       </div>
-                      <div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded-lg mt-3 mx-2" style="border: 1px solid yellow;">
+                      <div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded-lg mt-3 mx-2" style="border: 1px solid green;">
                         <div class="text-md-center text-xl-left">
                           <h6 class="mb-1">JavaScript</h6>
                         </div>
