--- a/index.html
+++ b/index.html
@@ -283,11 +283,6 @@
                           <h6 class="mb-1">HTML</h6>
                         </div>
                       </div>
-                      <div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded-lg mt-3 mx-2">
-                        <div class="text-md-center text-xl-left">
-                          <h6 class="mb-1">CSS</h6>
-                        </div>
-                      </div>
                       <div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded-lg mt-3 mx-2" style="border: 1px solid green;">
                         <div class="text-md-center text-xl-left">
                           <h6 class="mb-1">JavaScript</h6>
@@ -303,6 +298,11 @@
                       <div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded-lg mt-3 mx-2">
                         <div class="text-md-center text-xl-left">
                           <h6 class="mb-1">React.Js</h6>
+                        </div>
+                      </div>
+                      <div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded-lg mt-3 mx-2" style="border: 1px solid yellow;">
+                        <div class="text-md-center text-xl-left">
+                          <h6 class="mb-1">CSS</h6>
                         </div>
                       </div>
                       <div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded-lg mt-3 mx-2">
