--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                     <div class="row">
                       <div class="col-9">
                         <div class="d-flex align-items-center align-self-start">
-                          <h3 class="mb-0">Blood Donor Finder App (Concept)</h3>
+                          <h3 class="mb-0">Blood Donor Finder App</h3>
                         </div>
                       </div>
                       <div class="col-3">
