--- a/index.html
+++ b/index.html
@@ -455,65 +455,57 @@
     <script src="assets/js/todolist.js"></script>
     <script src="assets/js/dashboard.js"></script>
      <script>
-
-    // Change favicon on load complete
-  window.addEventListener('load', function () {
+document.addEventListener("DOMContentLoaded", () => {
+  // Change favicon after load
   const favicon = document.getElementById('favicon');
   if (favicon) {
-    favicon.href = 'https://img.icons8.com/?size=100&id=110316&format=png&color=40C057'; // ✅ Valid image URL
+    favicon.href = 'https://img.icons8.com/?size=100&id=110316&format=png&color=40C057';
   }
-});
 
-    function enterSite() {
-      const overlay = document.getElementById("enter-overlay");
-      overlay.style.display = "none";
+  // Terminal-style loader
+  window.enterSite = function () {
+    const overlay = document.getElementById("enter-overlay");
+    const loader = document.getElementById("loader");
+    const loadingText = document.getElementById("loading-text");
+    const cursor = document.querySelector(".cursor");
 
-      const loader = document.getElementById("loader");
-      loader.style.display = "flex";
+    if (!overlay || !loader || !loadingText || !cursor) return;
 
-      const loadingText = document.getElementById("loading-text");
-      const cursor = document.querySelector(".cursor");
+    overlay.style.display = "none";
+    loader.style.display = "flex";
 
-      const lines = [
-        "[+] Initializing system...",
-        "[+] Loading modules...",
-        "[+] Scanning vulnerabilities...",
-        "[+] Establishing secure shell...",
-        "[+] Tracing route...",
-        "[+] Injecting payload...",
-        "[+] Uploading portfolio data...",
-        "[+] Executing main sequence...",
-        "[+] Access granted."
-      ];
+    const lines = [
+      "[+] Initializing system...",
+      "[+] Loading modules...",
+      "[+] Scanning vulnerabilities...",
+      "[+] Establishing secure shell...",
+      "[+] Access granted."
+    ];
 
-      let lineIndex = 0;
-      let charIndex = 0;
-      let delay = 50;
+    let lineIndex = 0, charIndex = 0;
+    const delay = 50;
 
-      function typeTerminal() {
-        if (lineIndex < lines.length) {
-          if (charIndex < lines[lineIndex].length) {
-            loadingText.textContent += lines[lineIndex][charIndex];
-            charIndex++;
-            setTimeout(typeTerminal, delay);
-          } else {
-            loadingText.textContent += "\n";
-            charIndex = 0;
-            lineIndex++;
-            setTimeout(typeTerminal, 400);
-          }
+    function typeTerminal() {
+      if (lineIndex < lines.length) {
+        if (charIndex < lines[lineIndex].length) {
+          loadingText.textContent += lines[lineIndex][charIndex++];
+          setTimeout(typeTerminal, delay);
         } else {
-          cursor.style.display = "none";
-          loader.style.animation = "fadeOut 1s forwards";
-          setTimeout(() => {
-            loader.remove();
-            document.getElementById("main-body").classList.remove("overflow-hidden");
-          }, 1200);
+          loadingText.textContent += "\n";
+          charIndex = 0;
+          lineIndex++;
+          setTimeout(typeTerminal, 400);
         }
+      } else {
+        cursor.style.display = "none";
+        loader.style.animation = "fadeOut 1s forwards";
+        setTimeout(() => loader.remove(), 1000);
       }
-
-      setTimeout(typeTerminal, 1000);
     }
-  </script>
+    typeTerminal();
+  };
+});
+</script>
+
   </body>
 </html>
