--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                           <h6 class="mb-1">Network Defense</h6>
                         </div>
                       </div>
-                      <div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded-lg mt-3 mx-2" style="border: 1px solid magenta;">
+                      <div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded-lg mt-3 mx-2" style="border: 1px #82AAF2;">
                         <div class="text-md-center text-xl-left">
                           <h6 class="mb-1">SOC</h6>
                         </div>
