--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                                 <p class="text-muted mb-0">Offenso Academy , Kochi</p>
                               </div>
                               <div class="mr-auto text-sm-right pt-2 pt-sm-0">
-                                <p class="text-muted">2025 - </p>
+                                <p class="text-muted">2025 - present</p>
                                 
                               </div>
                             </div>
